[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "j4ne"
version = "0.1.0"
description = "A chat bot with data visualizations for IRC, Twitch, Discord, and Twitter"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "japherwocky"}
]
dependencies = [
    "tornado",
    "mcp",
    "openai",
    "pathspec",
    "rich",
    "starlette",
    "uvicorn",
    "huggingface_hub",
]

[project.scripts]
j4ne = "j4ne:main"
